--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -1,7 +1,28 @@
+@import url("https://fonts.googleapis.com/css?family=Fascinate&display=swap");
+
 .NavNav {
   background-color: rgb(255, 144, 77);
 }
+
 .logout {
+  background: rgb(250, 116, 111);
+  border-radius: 10px;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  outline-offset: 4px;
+}
+
+.layer {
+  display: block;
   background-color: rgb(255, 189, 89);
-  border-radius: 25px;
+  padding: 5px 10px;
+  border-radius: 12px;
+  color: white;
+  transform: translateY(-6px);
+  font-family: Fascinate;
+}
+
+.layer:active .logout {
+  transform: translateY(-2px);
 }
