--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,7 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+.whole {
+  background-color: rgb(255, 144, 69);
+  height: 100%;
+}
