--- a/src/front/styles/registerbutton.css
+++ b/src/front/styles/registerbutton.css
@@ -1,5 +1,5 @@
 .segundaPele {
-  display: block;
+  display: inline-block;
   background-color: rgb(255, 189, 89);
   padding: 5px 10px;
   border-radius: 12px;
