--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -6,6 +6,16 @@
     on that page only (the ones not reused in other pages).
 */
 .whole {
-  background-color: rgb(255, 144, 69);
+  background-color: rgb(255, 189, 88);
   height: 100%;
+}
+
+.FeelingModdy {
+  display: inline-block;
+  background-color: rgb(255, 189, 89);
+  font-size: larger;
+  margin-left: 520px;
+  border-radius: 12px;
+  color: white;
+  font-family: Fascinate;
 }
