--- a/src/front/styles/emotions.css
+++ b/src/front/styles/emotions.css
@@ -5,6 +5,8 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  /* position: center; */
+
   /* animation: mymove 5s infinite; */
 }
 .fadingout {
