--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -11,24 +11,13 @@
 }
 
 .logout {
-  background: rgb(250, 116, 111);
-  border-radius: 10px;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  outline-offset: 4px;
-}
-
-.layer {
   display: block;
-  background-color: rgb(255, 189, 89);
+  background-color: rgb(140, 82, 255);
   padding: 5px 10px;
   border-radius: 12px;
   color: white;
   transform: translateY(-6px);
   font-family: Fascinate;
-}
-
-.layer:active .logout {
-  transform: translateY(-2px);
+  border: 0;
+  outline: 0;
 }
