--- a/src/front/styles/registration.css
+++ b/src/front/styles/registration.css
@@ -3,7 +3,7 @@
   color: rgb(248, 113, 136);
 }
 
-.CreateAccount {
+.buttonCreateAccount {
   display: inline-block;
   background-color: rgb(140, 82, 255);
   padding: 5px 10px;
