--- a/src/front/styles/emotions.css
+++ b/src/front/styles/emotions.css
@@ -1,4 +1,5 @@
-.emotions-body {
+.emotions-body,
+.HowDoYou {
   animation: fadeInAnimation ease 5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -8,7 +9,7 @@
 }
 
 .GetEvents {
-  background-color: rgb(244, 86, 202);
+  background-color: rgb(140, 82, 255);
   border: none;
   color: rgb(255, 189, 88);
   padding: 10px 18px;
@@ -18,6 +19,14 @@
 
   border-radius: 15px;
   font-family: Fascinate;
+}
+
+.HowDoYou {
+  color: white;
+  font-family: Fascinate;
+  text-align: center;
+  font-size: x-large;
+  margin-left: 100px;
 }
 .fadingout {
   background-color: rgb(244, 86, 202);
