--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Fascinate&display=swap");
 
+.FeelingModdy {
+  display: inline-block;
+  background-color: rgb(255, 189, 89);
+  font-size: larger;
+  margin-left: 100px;
+  color: white;
+  font-family: Fascinate;
+}
+
 .Loglog {
   font-family: Fascinate;
   color: rgb(248, 113, 136);
