--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -3,7 +3,9 @@
 .NavNav {
   background-color: rgb(255, 189, 88);
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: -60px;
+  padding: 0px;
+  position: relative;
 }
 
 .image {
