added some style to the card and removed the changing account

--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -8,8 +8,11 @@
   position: relative;
 }
 
-.image {
+img {
   margin-left: 490px;
+  max-width: 200px;
+  width: auto;
+  height: auto;
 }
 
 .logout {
