--- a/src/front/styles/eventcard.css
+++ b/src/front/styles/eventcard.css
@@ -1,5 +1,36 @@
-img {
-  max-width: 200px;
-  width: auto;
-  height: auto;
+.Photo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+.card {
+  background-color: rgb(255, 189, 88);
+  border-radius: 12px;
+
+  box-shadow: 5px;
+}
+
+.FindMore {
+  display: block;
+  background-color: rgb(140, 82, 255);
+  padding: 5px 10px;
+  border-radius: 12px;
+  color: white;
+  font-family: Fascinate;
+  border: 0;
+  outline: 0;
+}
+
+.card-text {
+  color: white;
+  font-family: Fascinate;
+  text-align: center;
+}
+
+.card-title {
+  color: rgb(248, 113, 136);
+  font-family: Fascinate;
+  text-align: center;
 }
