--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -5,11 +5,9 @@
   margin-top: 0px;
   margin-bottom: -60px;
   padding: 0px;
-  position: relative;
 }
 
 img {
-  margin-left: 490px;
   max-width: 200px;
   width: auto;
   height: auto;
@@ -18,18 +16,7 @@ img {
 .logout {
   display: block;
   background-color: rgb(140, 82, 255);
-  padding: 5px 10px;
-  border-radius: 12px;
-  color: white;
-  transform: translateY(-6px);
-  font-family: Fascinate;
-  border: 0;
-  outline: 0;
-}
-
-.myaccount {
-  display: block;
-  background-color: rgb(140, 82, 255);
+  margin-left: 300px !important;
   padding: 5px 10px;
   border-radius: 12px;
   color: white;
