--- a/src/front/styles/registration.css
+++ b/src/front/styles/registration.css
@@ -7,7 +7,7 @@
 .backgroundImage2 {
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   height: 725px;
 }
 
