cards are in the middle of the page + changed colors of login page button and language + changed style of logout button + changed card fonts

--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -14,10 +14,10 @@ img {
 }
 
 .logout {
-  background-color: rgb(140, 82, 255);
+  background-color: transparent;
   margin-left: 300px !important;
   padding: 5px 10px;
-  border-radius: 12px;
-  color: white;
+  border: none;
+  color: rgb(140, 82, 255);
   font-family: Fascinate;
 }
