--- a/src/front/styles/emotions.css
+++ b/src/front/styles/emotions.css
@@ -7,15 +7,14 @@
 
 .GetEvents {
   background-color: rgb(140, 82, 255);
-  border: none;
   color: rgb(255, 189, 88);
   padding: 10px 18px;
   text-align: center;
   font-size: 20px;
   margin: 6px 6px 4px 10px;
-
   border-radius: 15px;
   font-family: Fascinate;
+  box-shadow: 5px 5px 2px rgb(244, 86, 202);
 }
 
 .HowDoYou {
@@ -28,18 +27,18 @@
 .fadingout {
   background-color: rgb(244, 86, 202);
   border: none;
-  color: rgb(255, 189, 88);
+  color: rgb(140, 82, 255);
   font-family: Fascinate;
   padding: 10px 18px;
   text-align: center;
   font-size: 20px;
   margin: 6px 6px 4px 10px;
-  opacity: 0.4;
+  opacity: 0.6;
   transition: 0.3s;
   border-radius: 15px;
 }
 input[type="checkbox"]:checked + label.fadingout {
-  background-color: rgb(140, 82, 255);
+  background-color: rgb(244, 86, 202);
   opacity: 1;
 }
 
