--- a/src/front/styles/eventcard.css
+++ b/src/front/styles/eventcard.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Peralta&display=swap");
+
 .Photo {
   display: block;
   margin-left: auto;
@@ -14,9 +16,11 @@
 
 .FindMore {
   display: block;
-  background-color: rgb(140, 82, 255);
+  background-color: transparent;
   padding: 5px 10px;
-  border-radius: 12px;
+  /* border: 2px; */
+  border-color: rgb(140, 82, 255) !important;
+  /* border-radius: 12px; */
   color: white;
   font-family: Fascinate;
   border: 0;
@@ -25,12 +29,12 @@
 
 .card-text {
   color: white;
-  font-family: Fascinate;
+  font-family: Peralta;
   text-align: center;
 }
 
 .card-title {
   color: rgb(248, 113, 136);
-  font-family: Fascinate;
+  font-family: Peralta;
   text-align: center;
 }
