--- a/src/front/styles/emotions.css
+++ b/src/front/styles/emotions.css
@@ -21,7 +21,7 @@
   color: white;
   font-family: Fascinate;
   text-align: center;
-  font-size: x-large;
+  font-size: xx-large;
   margin-left: 100px;
 }
 .fadingout {
